Added <hr> element after table code

--- a/index.html
+++ b/index.html
@@ -35,45 +35,47 @@
         <hr>
 
         <!--table-->
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name of Whiskey</th>
-                    <th scope="col">Origin of Whiskey</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                        <td>Speyburn</td>
-                        <td>Scotland</td>
-                </tr>
-                 <tr>
-                    <th scope="row">2</th>
-                        <td>Glen Moray</td>
-                        <td>Scotland</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                        <td>Highland Park</td>
-                        <td>Scotland</td>
-                </tr>
-                 <tr>
-                    <th scope="row">4</th>
-                        <td>Jack Daniels</td>
-                        <td>America</td>
-                </tr>
-                <tr>
-                    <th scope="row">5</th>
-                        <td>Powers</td>
-                        <td>Ireland</td>
-                </tr>
-            </tbody>
+        <section>
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name of Whiskey</th>
+                        <th scope="col">Origin of Whiskey</th>
+                    </tr>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                            <td>Speyburn</td>
+                            <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                            <td>Glen Moray</td>
+                            <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                            <td>Highland Park</td>
+                            <td>Scotland</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                            <td>Jack Daniels</td>
+                            <td>America</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">5</th>
+                            <td>Powers</td>
+                            <td>Ireland</td>
+                    </tr>
+                </tbody>
 
-            </thead>
-        </table>
+                </thead>
+            </table>
+        </section>
         <!--/table-->
-
+        <hr>
         <!-- Features -->
         <section class="features">
             <h2 class="text-uppercase">Features:</h2>
